Закончена верстка лендинга

--- a/index.html
+++ b/index.html
@@ -42,12 +42,9 @@
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#contacts">Contact</a>
-                          </li>
+                          </li>                          
                           <li class="nav-item">
-                            <a class="nav-link " href="#">Search</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link " href="#">Cart</a>
+                            <a class="nav-link " href="#"><i class="cart fas fa-shopping-cart"></i></a>
                           </li>
                         </ul>
                       </div>
@@ -187,8 +184,9 @@
             </div>        
         </div>        
     </section>
-    <section id='contacts' class='contacts'>
+    <section id='contacts' class='contacts'>        
         <div class="container">
+            <div class='bg-cont'></div>
             <div class="row">
                 <div class='col-2 offset-5'>
                     <h4 class='follow'>Follow US</h4>
@@ -272,16 +270,44 @@
         </div>
     </section>
     <footer class='footer'>
+        <div class='bg-foot'></div>
         <div class="container">            
             <div class="row">
-                <div class="col-3">
+                <div class="col-3 d-flex flex-column justify-content-between">
                     <a class='logo' href="#">Coffee</a>
                     <p>Creating a catchy tagline coffee shop business growth.</p>
                     <p class='phone'>+8801742-527137</p>
                 </div>
-                <div class="col-2"></div>
-                <div class="offset-1 col-2"></div>
-                <div class="offset-1 col-3"></div>
+                <div class="col-2">
+                    <h6>CATEGORIES</h6>
+                    <ul>
+                        <li class="cat-item"><a href='#'>Ashley Szekeres Art</a></li>
+                        <li class="cat-item"><a href='#'>Merchandise</a></li>
+                        <li class="cat-item"><a href='#'>Gift Certificates</a></li>
+                    </ul>
+                </div>
+                <div class="offset-1 col-2">
+                    <h6>INFORMATION</h6>
+                    <ul>
+                        <li class="info-item"><a href='#'>Coffee Beans</a></li>
+                        <li class="info-item"><a href='#'>Contact Us</a></li>
+                        <li class="info-item"><a href='#'>Blog</a></li>
+                    </ul>
+                </div>
+                <div class="offset-1 col-3">
+                    <h6>FOLLOW US</h6>
+                    <ul class='icons-lists'>
+                        <li class='twitter'><a class="fab fa-twitter" href='#'></a></li>
+                        <li class='facebook'><a class="fab fa-facebook-f" href='#'></a></li>
+                        <li class='instagram'><a class="fab fa-instagram" href='#'></a></li>
+                        <li class='linkedin'><a class="fab fa-linkedin-in" href='#'></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <p class='rights'>Copyright © 2022 Coffee, All rights reserved. Present by MoxCreative.</p>
+                </div>
             </div>
         </div>
     </footer>
