--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>    
-    <script src='js/main.js'></script>
-    <script src="node_modules/wow.js/dist/wow.min.js"></script>
+    <script src='JS/main.js'></script>
+    <script src="JS/wow.min.js"></script>
     <script>
         new WOW().init();
     </script>
